@@ -30,6 +30,7 @@
 -export([start/0, load_file/1,
 	 add_global_option/2, add_local_option/2,
 	 get_global_option/1, get_local_option/1]).
+-export([get_vh_by_auth_method/1]).
 
 -include("ejabberd.hrl").
 -include("ejabberd_config.hrl").
@@ -303,6 +304,11 @@ get_local_option(Opt) ->
 	    undefined
     end.
 
+%% Return the list of hosts handled by a given module
+get_vh_by_auth_method(AuthMethod) ->
+    mnesia:dirty_select(local_config,
+			[{#local_config{key = {auth_method, '$1'},
+					value=AuthMethod},[],['$1']}]).
 
 check_odbc_modules(ODBC_server) ->
     case catch check_odbc_modules2(ODBC_server) of
